updating configs standardizing format

--- a/assets/configs/stream_manager.yaml
+++ b/assets/configs/stream_manager.yaml
@@ -1,4 +1,6 @@
-StreamManager:
-  params:
-    stream_type: "camera"
-    source: 0
+# Stream Manager
+params:
+  stream_type: "camera"
+  source: 0
+type:
+  "StreamManager"
